Fix layout issues with 'box' and 'enclose'

--- a/css/mathlive.core.less
+++ b/css/mathlive.core.less
@@ -165,10 +165,11 @@ body[theme="dark"] .ML__fieldcontainer {
 }
 
 /* This is the actual field content (formula) */
-.ML__fieldcontainer__field {
+.ML__fieldcontainer__field { 
     align-self: center;
     position: relative;
-    overflow: hidden;
+    overflow: visible;
+    line-height: 0;
 }
 
 
