--- a/css/mathlive.less
+++ b/css/mathlive.less
@@ -1713,5 +1713,4 @@ scrolling to prevent the capture of hover events */
     top: 0;
     height: 100vh;
     width: 200px;
-    background: rgba(200, 0, 0, .5)
 }
